--- a/wave-api/src/main/resources/application.yml
+++ b/wave-api/src/main/resources/application.yml
@@ -1,4 +1,10 @@
 spring:
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
+      enabled: true
+
   h2:
     console:
       enabled: true
