fix: SecurityFilterChain Bean을 생성하지 못하는 오류 해결
AuthenticationManager를 커스터마이징 하는 과정에서
SecurityFilterChain Bean을 두 번 생성하는 오류 발생
AuthenticationManager를 세팅하는 과정이 잘못 됐음을 확인했고,
구현체인 ProviderManager를 새로 생성하는 것으로 문제를 해결했습니다.

--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,7 @@ project(':wave-core') {
     jar { enabled = true }
 
     dependencies {
+        implementation 'org.apache.commons:commons-lang3:3.12.0'
         runtimeOnly 'com.h2database:h2'
         runtimeOnly 'com.mysql:mysql-connector-j'
     }
