feat: 메일링 서버 구현, 회원가입, 로그인 기능 구현
- 인증/인가 시스템과 추후 알림 서비스를 위해 메일링 서버를 모듈화하여 구현
- 현재 메일링 서버는 회원가입과 로그인을 위한
인증코드를 전송하는데 사용됨
- 유저의 이메일로 인증코드를 전송하여 인증코드를 활용한 회원가입과 로그인 기능을 구현

--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ subprojects {
     dependencies {
         implementation 'org.springframework.boot:spring-boot-starter-web'
         implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+        implementation 'org.springframework.boot:spring-boot-starter-data-redis'
         implementation 'org.springframework.boot:spring-boot-starter-security'
         implementation 'org.springframework.boot:spring-boot-starter-validation'
 
@@ -67,5 +68,16 @@ project(':wave-api') {
         implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
         implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
         implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'
+    }
+}
+
+project(':wave-mail') {
+    bootJar { enabled = true }
+    jar { enabled = false }
+
+    dependencies {
+        implementation project(':wave-core')
+        implementation 'org.springframework.boot:spring-boot-starter-mail'
+        implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     }
 }
