--- a/wave-api/src/main/resources/application.yml
+++ b/wave-api/src/main/resources/application.yml
@@ -4,3 +4,4 @@ spring:
       - classpath:application-server.yml
       - classpath:application-jwt.yml
       - classpath:application-db.yml
+      - classpath:application-upload.yml
