--- a/build.gradle
+++ b/build.gradle
@@ -102,3 +102,12 @@ project(':wave-mail') {
         implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     }
 }
+
+project(':wave-music') {
+    bootJar { enabled = true }
+    jar { enabled = false }
+
+    dependencies {
+        implementation project(':wave-core')
+    }
+}
