refactor: auth 도메인 -> account로 변경 후 kafka 도입

--- a/wave-api/src/main/resources/application.yml
+++ b/wave-api/src/main/resources/application.yml
@@ -5,3 +5,5 @@ spring:
       - classpath:application-jwt.yml
       - classpath:application-db.yml
       - classpath:application-upload.yml
+      - classpath:application-producer.yml
+      - classpath:application-cache.yml
