--- a/build.gradle
+++ b/build.gradle
@@ -86,6 +86,9 @@ project(':wave-api') {
 
     dependencies {
         implementation project(':wave-core')
+
+        implementation 'org.springframework.kafka:spring-kafka'
+
         implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
         implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
         implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'
