refactor: 음원파일 저장 리팩토링

--- a/wave-media/src/main/resources/application.yml
+++ b/wave-media/src/main/resources/application.yml
@@ -3,4 +3,4 @@ spring:
     import:
       - classpath:application-db.yml
       - classpath:application-server.yml
-      - classpath:application-upload.yml
+      - classpath:application-media.yml
