--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,12 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
+.svg
+.gif
+.png
+.ico
+browserconfig.xml
+manifest.json
 
 ### STS ###
 .apt_generated
