revert: 리팩토링에 문제가 생겨 이전 버전으로 변경

--- a/wave-api/src/main/resources/application.yml
+++ b/wave-api/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   config:
     import:
       - classpath:application-server.yml
-      - classpath:application-jwt.yml
       - classpath:application-db.yml
-      - classpath:application-upload.yml
+      - classpath:application-jwt.yml
       - classpath:application-producer.yml
+      - classpath:application-consumer.yml
