--- a/wave-message/src/main/resources/application.yml
+++ b/wave-message/src/main/resources/application.yml
@@ -4,4 +4,5 @@ spring:
       - classpath:application-server.yml
       - classpath:application-mail.yml
       - classpath:application-db.yml
+      - classpath:application-producer.yml
       - classpath:application-consumer.yml
