refactor: Api서버와 Media서버의 파일 관련 클래스 리팩토링

--- a/wave-media/src/main/resources/application.yml
+++ b/wave-media/src/main/resources/application.yml
@@ -5,3 +5,5 @@ spring:
       - classpath:application-server.yml
       - classpath:application-media.yml
       - classpath:application-consumer.yml
+server:
+  port: 8081
