--- a/wave-media/src/main/resources/application.yml
+++ b/wave-media/src/main/resources/application.yml
@@ -4,6 +4,7 @@ spring:
       - classpath:application-db.yml
       - classpath:application-server.yml
       - classpath:application-media.yml
+      - classpath:application-producer.yml
       - classpath:application-consumer.yml
 server:
   port: 8081
