refactor: 알림기능 분산서버와 이벤트 드리븐 방식에 알맞게 리팩토링 및 다른 API에 추가

--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,9 @@ subprojects {
         annotationProcessor 'org.projectlombok:lombok'
         compileOnly 'org.projectlombok:lombok'
         annotationProcessor 'org.projectlombok:lombok'
+
+        implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.1'
+
     }
 
     def querydslSrcDir = 'src/main/generated'
