--- a/wave-api/src/main/resources/application.yml
+++ b/wave-api/src/main/resources/application.yml
@@ -7,3 +7,5 @@ spring:
       - classpath:application-producer.yml
       - classpath:application-consumer.yml
       - classpath:spy.properties
+  jpa:
+    open-in-view: false
