fix: 메시지 트랜잭션과 replyingKafkaTemplate에서 발생하는 문제 해결
- 메시지가 두 번 발행되는 문제와 커밋되지 않은 메시지가 발행되는 문제 해결
- 컨슈머가 readcommitted 수준의 메시지를 읽도록 변경
- replyingKafkaTemplate로 동기적으로 데이터를 가져올 때 발생하는 문제들 해결

--- a/build.gradle
+++ b/build.gradle
@@ -62,7 +62,7 @@ subprojects {
         runtimeOnly 'com.mysql:mysql-connector-j'
 
         // monitor tools
-        implementation 'org.springframework.boot:spring-boot-actuator'
+        implementation 'org.springframework.boot:spring-boot-starter-actuator'
         implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.1'
 
     }
@@ -121,6 +121,7 @@ project(':wave-media') {
         implementation project(':wave-core')
     }
 }
+
 project(':wave-batch') {
     bootJar { enabled = true }
     jar { enabled = false }
