docs: README.md 업데이트

--- a/wave-api/src/main/resources/application.yml
+++ b/wave-api/src/main/resources/application.yml
@@ -10,3 +10,6 @@ spring:
       - classpath:application-actuator.yml
   jpa:
     open-in-view: false
+    properties:
+      hibernate:
+        generate_statistics: true
